WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68558
[chromium] SharedGraphicsContext3D's context should not be destroyed during atexit
https://bugs.webkit.org/show_bug.cgi?id=68558
Summary
[chromium] SharedGraphicsContext3D's context should not be destroyed during a...
James Robinson
Reported
2011-09-21 12:35:28 PDT
[chromium] SharedGraphicsContext3D's context should not be destroyed during atexit
Attachments
Patch
(2.06 KB, patch)
2011-09-21 12:37 PDT
,
James Robinson
no flags
Details
Formatted Diff
Diff
now with 50% more compilation
(2.06 KB, patch)
2011-09-21 12:43 PDT
,
James Robinson
senorblanco
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2011-09-21 12:37:34 PDT
Created
attachment 108207
[details]
Patch
James Robinson
Comment 2
2011-09-21 12:43:59 PDT
Created
attachment 108209
[details]
now with 50% more compilation
James Robinson
Comment 3
2011-09-21 12:46:40 PDT
This is a fairly high frequency crasher on the latest dev release (although it only crashes when the render process is terminating normally).
Stephen White
Comment 4
2011-09-21 12:47:18 PDT
Comment on
attachment 108209
[details]
now with 50% more compilation Thanks for cleaning this up. r=me (if the bots are ok with it)
James Robinson
Comment 5
2011-09-21 13:38:20 PDT
Committed
r95668
: <
http://trac.webkit.org/changeset/95668
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug