[chromium] SharedGraphicsContext3D's context should not be destroyed during atexit https://bugs.webkit.org/show_bug.cgi?id=68558

Reviewed by Stephen White.

The SharedGraphicsContext3D's internal context is lazily created and then leaked intentionally, but since the
last ref is in a function-static RefPtr<> it ends up being destroyed at process exit time.  This is bad, since
by the time we get this far in process shutdown we can't actually cleanly run the destruction logic and we
crash.  Since we are explicitly leaking this for the lifetime of the process there's no point in keeping it in a
RefPtr<>

* platform/graphics/gpu/SharedGraphicsContext3D.cpp:
(WebCore::SharedGraphicsContext3D::get):

Canonical link: https://commits.webkit.org/84512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95668 268f45cc-cd09-0410-ab3c-d52691b4dbfc